--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,16 @@
         socket.on('broatcats', function(payload) {
             console.log('Escuchando:', payload);
         });
+
+        socket.on('nuevo-mensaje', function(payload) {
+            console.log(payload);
+            console.log('entro')
+        });
+
+        socket.on('active-bands', function(payload){
+            console.clear();
+            console.table(payload);
+        });
     </script>
 </body>
 
